--- a/src/main/resources/org/jenkinsci/plugins/websphere_deployer/WebSphereDeployerPlugin/help-artifacts.html
+++ b/src/main/resources/org/jenkinsci/plugins/websphere_deployer/WebSphereDeployerPlugin/help-artifacts.html
@@ -1,3 +1,3 @@
 <div>
-  Specify the EAR file you want deployed. (i.e. **/myapp.ear) This will deploy the last successful EAR build to WebSphere. Always use '**/' to preface your EAR location.
+  Specify the EAR or War files you want deployed. (i.e. modules/**/lastSuccessful/**/myapp.ear) This will deploy the last successful build to WebSphere.
 </div>
