--- a/src/main/resources/org/jenkinsci/plugins/websphere_deployer/WebSphereDeployerPlugin/help-earLevel.html
+++ b/src/main/resources/org/jenkinsci/plugins/websphere_deployer/WebSphereDeployerPlugin/help-earLevel.html
@@ -1,5 +1,4 @@
 <div>
-  The "Client Key File Path" is the absolute location on this server to the client key file. The default one that ships
-  with WebSphere can be found at "[WAS_INSTALL_PATH]/profiles/[PROFILE_TO_CONNECT_TO]/etc/DummyClientKeyFile.jks". This file should
-  be copied to this server and its path specified in this input field. Be sure to use an absolute path!
+  The "Generated EAR Level" is only used when deploying WAR artifacts to WebSphere. This option will be used to automatically wrap the WAR artifact in an EAR
+  and deploy it to WebSphere. The context root will be the name of the WAR artifact (similar to other containers, i.e. test.war will use '/test' as the web context).
 </div>
