--- a/src/main/resources/org/jenkinsci/plugins/websphere_deployer/LibertyDeployerPlugin/help-consolePassword.html
+++ b/src/main/resources/org/jenkinsci/plugins/websphere_deployer/LibertyDeployerPlugin/help-consolePassword.html
@@ -1,3 +1,3 @@
 <div>
-    Enter a username defined in the server.xml of IBM WebSphere Liberty Profile.
+    Enter a password defined in the server.xml of IBM WebSphere Liberty Profile.
 </div>
