--- a/src/main/resources/org/jenkinsci/plugins/websphere_deployer/LibertyDeployerPlugin/help-port.html
+++ b/src/main/resources/org/jenkinsci/plugins/websphere_deployer/LibertyDeployerPlugin/help-port.html
@@ -1,3 +1,3 @@
 <div>
-    The port to use to connect to IBM WebSphere Application Server based on the "Connector Type" specified.
+    The secure port to use to connect to IBM WebSphere Liberty Profile. Liberty requires a secure port for remote deployments.
 </div>
