--- a/src/main/resources/org/jenkinsci/plugins/websphere_deployer/LibertyDeployerPlugin/help-username.html
+++ b/src/main/resources/org/jenkinsci/plugins/websphere_deployer/LibertyDeployerPlugin/help-username.html
@@ -1,3 +1,3 @@
 <div>
-    Enter a username only if "Global Security" is enabled in the Administration Console for IBM WebSphere Application Server.
+    Enter a username defined in the server.xml of IBM WebSphere Liberty Profile.
 </div>
