updated help information on configuration page

--- a/src/main/resources/org/jenkinsci/plugins/websphere_deployer/WebSphereDeployerPlugin/help-classLoaderPolicy.html
+++ b/src/main/resources/org/jenkinsci/plugins/websphere_deployer/WebSphereDeployerPlugin/help-classLoaderPolicy.html
@@ -8,5 +8,5 @@
 
     <br/>
     <br/>
-    <small>Source: <a href="http://www-01.ibm.com/support/knowledgecenter/SSAW57_8.5.5/com.ibm.websphere.nd.doc/ae/crun_classload.html?cp=SSAW57_8.5.5%2F1-8-2-5-0">IBM Knowledge Center</a></small>
+    <small>Source: <a href="http://www-01.ibm.com/support/knowledgecenter/SSAW57_8.5.5/com.ibm.websphere.nd.doc/ae/crun_classload.html?cp=SSAW57_8.5.5%2F1-8-2-5-0" target="_blank">IBM Knowledge Center</a></small>
 </div>
