--- a/src/main/resources/org/jenkinsci/plugins/websphere_deployer/WebSphereDeployerPlugin/help-deploymentTimeout.html
+++ b/src/main/resources/org/jenkinsci/plugins/websphere_deployer/WebSphereDeployerPlugin/help-deploymentTimeout.html
@@ -1,4 +1,7 @@
 <div>	
-    Max Time in minutes to wait before to start the application. 
-    If after 'deploymentTimeout' minutes, the application is not deployed, the plugin will fail.    
+    The maximum time in minutes to wait before stopping the deployment process. 
+    If after 'deploymentTimeout' minutes, the application is not deployed, the deployment will fail.    
+    <br/>
+    <br/>
+    The default timeout is 5 minutes if a timeout is not specified
 </div>
