--- a/src/main/resources/org/jenkinsci/plugins/websphere_deployer/WebSphereDeployerPlugin/help-port.html
+++ b/src/main/resources/org/jenkinsci/plugins/websphere_deployer/WebSphereDeployerPlugin/help-port.html
@@ -1,3 +1,7 @@
 <div>
     The port to use to connect to IBM WebSphere Application Server based on the "Connector Type" specified.
+    <br/>
+    If you're deploying to WebSphere ND, you should point to the deployment manager's configured port for the specified "Connector Type".
+    <br/>
+    WebSphere ND's default SOAP port, or instance, is 8879. Whereas, standard WebSphere's default SOAP port is 8880. Check your WebSphere administration console or integrated solutions console for port information.
 </div>
